// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create-new-project-content render default 1`] = `

<div>
  <div class="z-[3] flex w-full rounded-md border-[1px] border-dashed bg-card">
    <form class="relative w-1/2 space-y-6 border-r-[1px] border-solid border-dashed">
      <div class="mb-12 flex flex-col gap-2 px-8 pt-8">
        <h5 class="text-xl font-medium">
          Project details
        </h5>
        <p class="text-sm italic text-muted-foreground/50">
          Required fields are marked with an asterisk (*).
        </p>
      </div>
      <div class="flex flex-col gap-2 px-8">
        <gui-label htmlfor="projectName">
          Project Name *
        </gui-label>
        <gui-input
          id="projectName"
          value
          placeholder="vlt-project"
          classname
        >
        </gui-input>
      </div>
      <div
        class="flex flex-col gap-6"
        style="top: 0px;"
      >
        <div class="flex flex-col gap-2 px-8">
          <gui-label htmlfor="location">
            Location *
          </gui-label>
          <gui-popover>
            <gui-popover-trigger aschild="true">
              <gui-button classname="group flex h-[40px] w-full items-center justify-between border-[1px] border-muted bg-white text-muted-foreground shadow-none hover:bg-accent dark:bg-muted-foreground/5 dark:hover:bg-muted-foreground/10">
                ~
                <gui-chevron-down-icon classname="text-foreground opacity-50 duration-300 group-data-[state=open]:-rotate-180">
                </gui-chevron-down-icon>
              </gui-button>
            </gui-popover-trigger>
            <gui-popover-content classname="max-h-[--radix-popover-content-available-height] w-[--radix-popover-trigger-width] p-0">
              <gui-command>
                <gui-command-input placeholder="Select location">
                </gui-command-input>
                <gui-command-list>
                  <gui-command-empty>
                    Location not found.
                  </gui-command-empty>
                  <gui-command-group>
                  </gui-command-group>
                </gui-command-list>
              </gui-command>
            </gui-popover-content>
          </gui-popover>
        </div>
        <div class="flex flex-col gap-2 px-8">
          <gui-label htmlfor="author">
            Author
          </gui-label>
          <gui-input
            placeholder="John Doe <johndoe@acme.com>"
            id="author"
            value
          >
          </gui-input>
        </div>
      </div>
      <div class="absolute bottom-0 flex w-full justify-end border-t-[1px] border-dashed px-8 py-4">
        <gui-button
          classname="font-medium"
          disabled="true"
          type="submit"
        >
          Create Project
        </gui-button>
      </div>
    </form>
    <div class="relative h-full w-1/2">
      <div class="absolute inset-0 z-[10] h-full w-full bg-gradient-radial from-card/20 to-card/80">
      </div>
      <gui-grid-system classname="h-full w-full">
        <gui-grid
          rows="7"
          columns="7"
        >
          <gui-grid-cell
            column="2"
            row="2"
          >
            <div class="/80 relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card">
              <div class="flex items-center justify-center shadow-inner">
                <gui-next-icon classname="size-12 text-muted-foreground/80">
                </gui-next-icon>
              </div>
            </div>
          </gui-grid-cell>
          <gui-grid-cell
            column="6"
            row="2"
          >
            <div class="/80 relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card">
              <div class="flex items-center justify-center shadow-inner">
                <gui-nuxt-icon classname="size-12 text-muted-foreground/80">
                </gui-nuxt-icon>
              </div>
            </div>
          </gui-grid-cell>
          <gui-grid-cell
            column="2"
            row="6"
          >
            <div class="/80 relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card">
              <div class="flex items-center justify-center shadow-inner">
                <gui-vercel-icon classname="size-12 text-muted-foreground/80">
                </gui-vercel-icon>
              </div>
            </div>
          </gui-grid-cell>
          <gui-grid-cell
            column="6"
            row="6"
          >
            <div class="/80 relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card">
              <div class="flex h-full w-full items-center justify-center shadow-inner">
                <gui-node-icon classname="size-12 fill-muted-foreground/80">
                </gui-node-icon>
              </div>
            </div>
          </gui-grid-cell>
          <gui-grid-cell
            column="4"
            row="4"
          >
            <div class="relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card p-2 shadow-inner">
              <div class="flex items-center justify-center">
                <svg
                  width="24"
                  class="size-16 text-muted-foreground"
                  height="24"
                  viewbox="0 0 24 24"
                  fill="none"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    fill-rule="evenodd"
                    clip-rule="evenodd"
                    d="M6.54545 17.4601C6.54545 20.4686 8.9945 22.9201 12 22.9201C15.0055 22.9201 17.4545 20.4686 17.4545 17.4601C17.4545 16.6302 17.2691 15.8275 16.9145 15.0959L18.7745 11.9947C21.6764 11.8745 24 9.54858 24 6.54008C24 3.53157 21.551 1.08008 18.5455 1.08008C15.54 1.08008 13.0909 3.53157 13.0909 6.54008C13.0909 7.37 13.2764 8.17266 13.631 8.90421L12 11.6234L10.369 8.90421C10.7236 8.17808 10.9091 7.37 10.9091 6.54008C10.9091 3.53157 8.46004 1.08008 5.45455 1.08008C2.44909 1.08008 0 3.6081 0 6.54008C0 9.47205 2.32364 11.8745 5.22545 11.9947L7.0855 15.0959C6.73091 15.8221 6.54545 16.6302 6.54545 17.4601ZM15.2727 6.54008C15.2727 4.73277 16.74 3.26408 18.5455 3.26408C20.351 3.26408 21.8182 4.73277 21.8182 6.54008C21.8182 8.34738 20.351 9.81608 18.5455 9.81608C18.2236 9.81608 17.9127 9.76698 17.6182 9.67962L14.3291 15.1615C14.9127 15.7566 15.2727 16.5646 15.2727 17.4601C15.2727 19.2674 13.8055 20.7361 12 20.7361C10.1945 20.7361 8.72727 19.2674 8.72727 17.4601C8.72727 16.5646 9.08727 15.7511 9.67087 15.1615L6.38182 9.67962C6.08727 9.76698 5.77641 9.81608 5.45455 9.81608C3.64905 9.81608 2.18182 8.34738 2.18182 6.54008C2.18182 4.73277 3.64905 3.26408 5.45455 3.26408C7.26004 3.26408 8.72727 4.73277 8.72727 6.54008C8.72727 7.43552 8.36727 8.24901 7.78368 8.83869L11.0727 14.3205C11.3673 14.2332 11.6781 14.1841 12 14.1841C12.3219 14.1841 12.6327 14.2332 12.9273 14.3205L16.2163 8.83869C15.6327 8.2436 15.2727 7.43552 15.2727 6.54008Z"
                    fill="currentColor"
                  >
                  </path>
                </svg>
              </div>
            </div>
          </gui-grid-cell>
          <gui-animated-beam
            containerref="[object Object]"
            fromref="[object Object]"
            delay="0.5"
            toref="[object Object]"
          >
          </gui-animated-beam>
          <gui-animated-beam
            containerref="[object Object]"
            fromref="[object Object]"
            delay="1"
            reverse="true"
            toref="[object Object]"
          >
          </gui-animated-beam>
          <gui-animated-beam
            containerref="[object Object]"
            fromref="[object Object]"
            delay="1.5"
            toref="[object Object]"
          >
          </gui-animated-beam>
          <gui-animated-beam
            containerref="[object Object]"
            delay="2"
            reverse="true"
            fromref="[object Object]"
            toref="[object Object]"
          >
          </gui-animated-beam>
        </gui-grid>
      </gui-grid-system>
    </div>
  </div>
</div>

`;

exports[`create-new-project-content with results 1`] = `

<div>
  <div class="z-[3] flex w-full rounded-md border-[1px] border-dashed bg-card">
    <form class="relative w-1/2 space-y-6 border-r-[1px] border-solid border-dashed">
      <div class="mb-12 flex flex-col gap-2 px-8 pt-8">
        <h5 class="text-xl font-medium">
          Project details
        </h5>
        <p class="text-sm italic text-muted-foreground/50">
          Required fields are marked with an asterisk (*).
        </p>
      </div>
      <div class="flex flex-col gap-2 px-8">
        <gui-label htmlfor="projectName">
          Project Name *
        </gui-label>
        <gui-input
          id="projectName"
          value
          placeholder="vlt-project"
          classname
        >
        </gui-input>
      </div>
      <div
        class="flex flex-col gap-6"
        style="top: 0px;"
      >
        <div class="flex flex-col gap-2 px-8">
          <gui-label htmlfor="location">
            Location *
          </gui-label>
          <gui-popover>
            <gui-popover-trigger aschild="true">
              <gui-button classname="group flex h-[40px] w-full items-center justify-between border-[1px] border-muted bg-white text-muted-foreground shadow-none hover:bg-accent dark:bg-muted-foreground/5 dark:hover:bg-muted-foreground/10">
                ~
                <gui-chevron-down-icon classname="text-foreground opacity-50 duration-300 group-data-[state=open]:-rotate-180">
                </gui-chevron-down-icon>
              </gui-button>
            </gui-popover-trigger>
            <gui-popover-content classname="max-h-[--radix-popover-content-available-height] w-[--radix-popover-trigger-width] p-0">
              <gui-command>
                <gui-command-input placeholder="Select location">
                </gui-command-input>
                <gui-command-list>
                  <gui-command-empty>
                    Location not found.
                  </gui-command-empty>
                  <gui-command-group>
                    <gui-command-item value="/home/user">
                      <gui-check-icon classname="mr-2 size-4 opacity-0">
                      </gui-check-icon>
                      ~
                    </gui-command-item>
                  </gui-command-group>
                </gui-command-list>
              </gui-command>
            </gui-popover-content>
          </gui-popover>
        </div>
        <div class="flex flex-col gap-2 px-8">
          <gui-label htmlfor="author">
            Author
          </gui-label>
          <gui-input
            placeholder="John Doe <johndoe@acme.com>"
            id="author"
            value="Ruy Adorno"
          >
          </gui-input>
        </div>
      </div>
      <div class="absolute bottom-0 flex w-full justify-end border-t-[1px] border-dashed px-8 py-4">
        <gui-button
          classname="font-medium"
          disabled="true"
          type="submit"
        >
          Create Project
        </gui-button>
      </div>
    </form>
    <div class="relative h-full w-1/2">
      <div class="absolute inset-0 z-[10] h-full w-full bg-gradient-radial from-card/20 to-card/80">
      </div>
      <gui-grid-system classname="h-full w-full">
        <gui-grid
          rows="7"
          columns="7"
        >
          <gui-grid-cell
            column="2"
            row="2"
          >
            <div class="/80 relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card">
              <div class="flex items-center justify-center shadow-inner">
                <gui-next-icon classname="size-12 text-muted-foreground/80">
                </gui-next-icon>
              </div>
            </div>
          </gui-grid-cell>
          <gui-grid-cell
            column="6"
            row="2"
          >
            <div class="/80 relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card">
              <div class="flex items-center justify-center shadow-inner">
                <gui-nuxt-icon classname="size-12 text-muted-foreground/80">
                </gui-nuxt-icon>
              </div>
            </div>
          </gui-grid-cell>
          <gui-grid-cell
            column="2"
            row="6"
          >
            <div class="/80 relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card">
              <div class="flex items-center justify-center shadow-inner">
                <gui-vercel-icon classname="size-12 text-muted-foreground/80">
                </gui-vercel-icon>
              </div>
            </div>
          </gui-grid-cell>
          <gui-grid-cell
            column="6"
            row="6"
          >
            <div class="/80 relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card">
              <div class="flex h-full w-full items-center justify-center shadow-inner">
                <gui-node-icon classname="size-12 fill-muted-foreground/80">
                </gui-node-icon>
              </div>
            </div>
          </gui-grid-cell>
          <gui-grid-cell
            column="4"
            row="4"
          >
            <div class="relative z-[2] flex h-full w-full items-center justify-center border-b-[1px] border-r-[1px] border-dashed border-muted bg-card p-2 shadow-inner">
              <div class="flex items-center justify-center">
                <svg
                  width="24"
                  class="size-16 text-muted-foreground"
                  height="24"
                  viewbox="0 0 24 24"
                  fill="none"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    fill-rule="evenodd"
                    clip-rule="evenodd"
                    d="M6.54545 17.4601C6.54545 20.4686 8.9945 22.9201 12 22.9201C15.0055 22.9201 17.4545 20.4686 17.4545 17.4601C17.4545 16.6302 17.2691 15.8275 16.9145 15.0959L18.7745 11.9947C21.6764 11.8745 24 9.54858 24 6.54008C24 3.53157 21.551 1.08008 18.5455 1.08008C15.54 1.08008 13.0909 3.53157 13.0909 6.54008C13.0909 7.37 13.2764 8.17266 13.631 8.90421L12 11.6234L10.369 8.90421C10.7236 8.17808 10.9091 7.37 10.9091 6.54008C10.9091 3.53157 8.46004 1.08008 5.45455 1.08008C2.44909 1.08008 0 3.6081 0 6.54008C0 9.47205 2.32364 11.8745 5.22545 11.9947L7.0855 15.0959C6.73091 15.8221 6.54545 16.6302 6.54545 17.4601ZM15.2727 6.54008C15.2727 4.73277 16.74 3.26408 18.5455 3.26408C20.351 3.26408 21.8182 4.73277 21.8182 6.54008C21.8182 8.34738 20.351 9.81608 18.5455 9.81608C18.2236 9.81608 17.9127 9.76698 17.6182 9.67962L14.3291 15.1615C14.9127 15.7566 15.2727 16.5646 15.2727 17.4601C15.2727 19.2674 13.8055 20.7361 12 20.7361C10.1945 20.7361 8.72727 19.2674 8.72727 17.4601C8.72727 16.5646 9.08727 15.7511 9.67087 15.1615L6.38182 9.67962C6.08727 9.76698 5.77641 9.81608 5.45455 9.81608C3.64905 9.81608 2.18182 8.34738 2.18182 6.54008C2.18182 4.73277 3.64905 3.26408 5.45455 3.26408C7.26004 3.26408 8.72727 4.73277 8.72727 6.54008C8.72727 7.43552 8.36727 8.24901 7.78368 8.83869L11.0727 14.3205C11.3673 14.2332 11.6781 14.1841 12 14.1841C12.3219 14.1841 12.6327 14.2332 12.9273 14.3205L16.2163 8.83869C15.6327 8.2436 15.2727 7.43552 15.2727 6.54008Z"
                    fill="currentColor"
                  >
                  </path>
                </svg>
              </div>
            </div>
          </gui-grid-cell>
          <gui-animated-beam
            containerref="[object Object]"
            fromref="[object Object]"
            delay="0.5"
            toref="[object Object]"
          >
          </gui-animated-beam>
          <gui-animated-beam
            containerref="[object Object]"
            fromref="[object Object]"
            delay="1"
            reverse="true"
            toref="[object Object]"
          >
          </gui-animated-beam>
          <gui-animated-beam
            containerref="[object Object]"
            fromref="[object Object]"
            delay="1.5"
            toref="[object Object]"
          >
          </gui-animated-beam>
          <gui-animated-beam
            containerref="[object Object]"
            delay="2"
            reverse="true"
            fromref="[object Object]"
            toref="[object Object]"
          >
          </gui-animated-beam>
        </gui-grid>
      </gui-grid-system>
    </div>
  </div>
</div>

`;
